@@ -26,6 +26,9 @@ proc bullet      {}                 [__ bullet]
 proc enum        {}                 [__ enum]
 proc see_also    {args}             [__ see_also]
 proc keywords    {args}             [__ keywords]
+proc example     {code}             [__ example]
+proc example_begin {}               [__ example_begin]
+proc example_end {}                 [__ example_end]
 proc nl          {}                 [__ nl]
 proc arg         {text}             [__ arg]
 proc cmd         {text}             [__ cmd]
